tests/expectations/parser/structs/only_comma_separators_fail.out
Error [EPAR0370047]: expected field name
    --> test:9:5
     |
   9 |     ;
     |     ^
  10 |     y: u8
     |     ^^^^^
Error [EPAR0370047]: expected field name
    --> test:15:5
     |
  15 |     ;
     |     ^
  16 |     y: u8;
     |     ^^^^^^
